# digital-vault

./: Makefile  docker-compose.yaml  pyproject.toml
docs/: roadmap.md
src/: __init__.py
src/backend/: __main__.py
src/configurations/: .env  __init__.py  init-mongodb.js  load_env_variables.py  logger_config.yaml
src/log_utils/: __init__.py  formatters.py  handlers.py
src/pyutils/: __init__.py
src/pyutils/log_utils/: __init__.py  handlers.py
src/scripts/: 01_try_mongo_logger.py
src/shared_utils/: __init__.py
src/shared_utils/dependencies/: __init__.py  database.py
src/shared_utils/logging/: __init__.py  formatters.py  handlers.py
tests/: test_mongo_handler.py
