[project]
name = "digital-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[standard]>=0.135.1",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "pytest>=9.0.2",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "types-decorator>=5.2.0.20260408",
    "types-pycurl>=7.45.7.20260408",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
target-version = "py314"
line-length = 100
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["B", "B9", "C", "E", "F", "I", "W", "T"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = false


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"


markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]



